# osaka-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: images.rs  main.rs
